Added install targets for various libraries

--- a/CMSIS/DSP/Source/BayesFunctions/CMakeLists.txt
+++ b/CMSIS/DSP/Source/BayesFunctions/CMakeLists.txt
@@ -21,3 +21,4 @@ if ((NOT ARMAC5) AND (NOT DISABLEFLOAT16))
 target_sources(CMSISDSPBayes PRIVATE arm_gaussian_naive_bayes_predict_f16.c)
 endif()
 
+install(TARGETS CMSISDSPBayes LIBRARY)
