--- a/CMSIS/DSP/Source/DistanceFunctions/CMakeLists.txt
+++ b/CMSIS/DSP/Source/DistanceFunctions/CMakeLists.txt
@@ -53,4 +53,4 @@ target_sources(CMSISDSPDistance PRIVATE arm_jensenshannon_distance_f16.c)
 target_sources(CMSISDSPDistance PRIVATE arm_minkowski_distance_f16.c)
 endif()
 
- 
+install(TARGETS CMSISDSPDistance LIBRARY)
