--- a/CMSIS/DSP/Source/MatrixFunctions/CMakeLists.txt
+++ b/CMSIS/DSP/Source/MatrixFunctions/CMakeLists.txt
@@ -52,3 +52,5 @@ target_sources(CMSISDSPMatrix PRIVATE arm_mat_init_f16.c)
 target_sources(CMSISDSPMatrix PRIVATE arm_mat_cholesky_f16.c)
 
 endif()
+
+install(TARGETS CMSISDSPMatrix LIBRARY)
