--- a/CMSIS/DSP/Source/SupportFunctions/CMakeLists.txt
+++ b/CMSIS/DSP/Source/SupportFunctions/CMakeLists.txt
@@ -26,3 +26,4 @@ target_sources(CMSISDSPSupport PRIVATE arm_weighted_sum_f16.c)
 target_sources(CMSISDSPSupport PRIVATE arm_barycenter_f16.c)
 endif()
 
+install(TARGETS CMSISDSPSupport LIBRARY)
