--- a/CMSIS/DSP/Source/QuaternionMathFunctions/CMakeLists.txt
+++ b/CMSIS/DSP/Source/QuaternionMathFunctions/CMakeLists.txt
@@ -27,5 +27,4 @@ configDsp(CMSISDSPQuaternionMath ${ROOT})
 ### Includes
 target_include_directories(CMSISDSPQuaternionMath PUBLIC "${DSP}/Include")
 
-
-
+install(TARGETS CMSISDSPQuaternionMath LIBRARY)
